--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YelpCamp | <% campground.title %> </title>
 </head>
-<body>
-    
+<body style="width: 900px; margin: 100px auto 50px auto; font-family: sans-serif; font-size: 1.1rem;">
+    <p><% campground.id %></p>
 </body>
 </html>
