--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,7 +10,7 @@
     <h1>All Campgrounds</h1>
     <ul>
         <% for (let campground of campgrounds) {%>
-            <li> <a href="/campgrounds/<%= campground.id %>"><%= campground.title %></a>
+            <li> <a href="campgrounds/<%= campground._id %>"><%= campground.title %></a>
         <% } %>
     </ul>
     
