--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -6,6 +6,7 @@
     <title>YelpCamp | <% campground.title %> </title>
 </head>
 <body>
-    <p><%= campground._id %></p>
+    <h1><%= campground.title %></h1>
+    <h2> <%= campground.location %> </h2>
 </body>
 </html>
