--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,6 +8,9 @@
 <body>
 
     <h1>All Campgrounds</h1>
+    <div>
+        <a href="/campgrounds/new"><button>Add Campground</button></a>
+    </div>
     <ul>
         <% for (let campground of campgrounds) {%>
             <li> <a href="campgrounds/<%= campground._id %>"><%= campground.title %></a>
