--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -8,5 +8,6 @@
 <body>
     <h1><%= campground.title %></h1>
     <h2> <%= campground.location %> </h2>
+    <a href="/campgrounds"><button>All Campgrounds</button></a>
 </body>
 </html>
