added campground edit functionality

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -17,6 +17,8 @@
         </div>
         <button>Add Campground</button>
     </form>
-    <a href="/campgrounds"><button>All Campgrounds</button></a>
+    <div>
+        <a href="/campgrounds">All Campgrounds</a>
+    </div>
 </body>
 </html>
