--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -8,6 +8,12 @@
 <body>
     <h1><%= campground.title %></h1>
     <h2> <%= campground.location %> </h2>
-    <a href="/campgrounds"><button>All Campgrounds</button></a>
+    <div>
+        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+    </div>
+    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
+        <button>Delete</button>
+    </form>
 </body>
 </html>
