--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YelpCamp | <% campground.title %> </title>
-</head>
-<body>
-    <h1><%= campground.title %></h1>
-    <h2> <%= campground.location %> </h2>
-    <div>
-        <a href="/campgrounds">All Campgrounds</a>
-        <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-    </div>
-    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
-        <button>Delete</button>
-    </form>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+<h1><%= campground.title %></h1>
+<h2> <%= campground.location %> </h2>
+<div>
+    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+</div>
+<form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
+    <button>Delete</button>
+</form>
