added static assets and navigation partial

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -6,6 +6,9 @@
     <title>BOILERPLATE</title>
 </head>
 <body>
-    <%- body %>
+    <%- include('../partials/navbar') %>
+    <main class="container">
+        <%- body %>
+    </main>
 </body>
 </html>
