brought in sprite sheet and added hamburger

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="navigation__container">
         <a href="" class="navigation__brand" href="/">YelpCamp</a>
         <svg class="navigation__toggle-hamburger">
-            <use href="/images/sprites.svg#icon-hamburger"></use>
+            <use href="/images/sprite.svg#icon-hamburger"></use>
         </svg>
     </div>
 </nav>
