moved sass out of static assets into top level project folder

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,5 +4,8 @@
         <svg class="navigation__toggle-hamburger">
             <use href="/images/sprite.svg#icon-hamburger"></use>
         </svg>
+        <div class="navigation__links navigation__links--collapse">
+            
+        </div>
     </div>
 </nav>
