begin adding page styles

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,7 +7,7 @@
     <title>BOILERPLATE</title>
 </head>
 <body>
-    <%- include('../partials/navbar') %>
+    <%- include('../partials/header') %>
     <main class="container">
         <%- body %>
     </main>
