--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,3 @@
-@import url('base');
-@import url('layout');
-@import url('components');
+@import 'partials/base';
+@import 'partials/layout';
+@import 'partials/components';
