--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,30 @@ html {
 
 body {
   font: 400 1rem/1.7 "Open Sans", sans-serif;
-  background: linear-gradient(to right bottom, rgb(61, 247, 237), rgb(255, 255, 255)) no-repeat center/cover;
-  min-height: 100vh;
+  background: linear-gradient(to right bottom, rgb(51, 253, 0), rgb(255, 255, 255)) no-repeat center/cover;
+  min-height: 130vh;
+  position: relative;
+}
+
+.container {
+  padding: 1rem;
+}
+
+.header {
+  position: absolute;
+  height: 4rem;
+  background-color: white;
+  width: 100%;
+}
+
+.navigation {
+  display: flex;
+}
+.navigation__links {
+  display: flex;
+}
+.navigation__links--collapsed {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
