--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -18,9 +18,10 @@ body {
     font: 400 1rem/1.7 'Open Sans', sans-serif;
     // color: var();
     background:
-        linear-gradient(to right bottom, rgb(61, 247, 237), rgb(255, 255, 255))
+        linear-gradient(to right bottom, rgb(51, 253, 0), rgb(255, 255, 255))
         // linear-gradient(to left bottom, rgba(100, 100, 200, .5), rgba(150, 150, 200, .5))
         no-repeat
         center/cover;
-    min-height: 100vh;
+    min-height: 130vh;
+    position: relative;
 }
