--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <%- include('../partials/header') %>
-    <main class="container">
+    <main class="page-container">
         <%- body %>
     </main>
 </body>
