--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-* {
+*,
+svg {
   margin: 0;
   padding: 0;
 }
@@ -16,8 +17,6 @@ html {
 body {
   font: 400 1rem/1.7 "Open Sans", sans-serif;
   background: linear-gradient(to right bottom, rgb(51, 253, 0), rgb(255, 255, 255)) no-repeat center/cover;
-  min-height: 130vh;
-  position: relative;
 }
 
 .container {
@@ -26,17 +25,18 @@ body {
 }
 
 .header {
-  position: absolute;
-  height: 4rem;
   background-color: white;
   width: 100%;
 }
 
 .navigation {
   display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 .navigation__links {
   display: flex;
+  justify-content: space-between;
 }
 .navigation__links--collapsed {
   display: none;
