--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,13 +1,14 @@
 <nav class="navigation">
-    <div class="navigation__branding">
-        <a href="" class="navigation__logo" href="/">
-            YelpCamp
-        </a>
-    </div>
+    <a href="" class="navigation__logo" href="/">
+        Brand Name
+    </a>
 
     <div class="navigation__links navigation__links--collapsed">
         <a href="/campgrounds" class="navigation__item">All Campgrounds</a>
         <a href="/campgrounds/new" class="navigation__item">Add Campground</a>
+        <a href="/campgrounds/new" class="navigation__item">Link Three</a>
+        <a href="/campgrounds/new" class="navigation__item">Link Four</a>
+        <a href="/campgrounds/new" class="navigation__item">Link Five</a>
     </div>
 
     <svg class="navigation__hamburger">
