--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-*,
-svg {
+* {
   margin: 0;
   padding: 0;
 }
@@ -16,30 +15,72 @@ html {
 
 body {
   font: 400 1rem/1.7 "Open Sans", sans-serif;
-  background: linear-gradient(to right bottom, rgb(51, 253, 0), rgb(255, 255, 255)) no-repeat center/cover;
+  background: no-repeat center/cover;
+  min-height: 130vh;
+  position: relative;
+  font: 400 1.1rem/1.5 Poppins, sans-serif;
+  letter-spacing: 0.1rem;
 }
 
-.container {
-  padding: 1rem;
+.content-container {
   margin: 0 auto;
 }
 
 .header {
+  position: absolute;
+  height: 4rem;
   background-color: white;
   width: 100%;
+  padding: 0.5rem 2rem;
+  background: #114df0;
 }
 
 .navigation {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
+}
+.navigation__logo {
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
 }
 .navigation__links {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  height: 4rem;
+  position: absolute;
+  top: 4rem;
 }
 .navigation__links--collapsed {
   display: none;
+}
+.navigation__hamburger {
+  height: 3rem;
+  width: 3rem;
+  fill: #ffffff;
+}
+.navigation__hamburger:hover {
+  cursor: pointer;
+}
+.campgrounds {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.campgrounds__list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.campgrounds__item {
+  height: 8rem;
+  max-width: 25rem;
+}
+.campgrounds__item > a {
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=style.css.map */
