--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -1,26 +1,31 @@
 .header {
-    // position: absolute;
-    // height: 4rem;
+    position: absolute;
+    height: 4rem;
     background-color: white;
     width: 100%;
+    padding: .5rem 2rem;
+    background: #114df0;
 }
 
 .navigation {
     display: flex;
-    // height: 100%;
     width: 100%;
     justify-content: space-between;
-    &__branding {
-
-    }
+    align-items: center;
 
     &__logo {
-
+        text-decoration: none;
+        color: white;
+        font-size: 2rem;
     }
 
     &__links {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        height: 4rem;
+        position: absolute;
+        top: 4rem;
 
         &--collapsed {
             display: none;
@@ -28,11 +33,38 @@
     }
 
     &__hamburger {
-        // align-self: flex-end;
-        // height: 100%;
+        height: 3rem;
+        width: 3rem;
+        fill: #ffffff;
+        
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     &__item {
-
     }
 }
+
+.campgrounds {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__list {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__item {
+        // flex: 1 1 10rem;
+        height: 8rem;
+        max-width: 25rem;
+    }
+
+    &__item > a {
+        text-decoration: none;
+    }
+}
+
