--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,11 +1,13 @@
 <% layout('layouts/boilerplate') %>
-<h1>All Campgrounds</h1>
-<div>
-    <a href="/campgrounds/new">Add Campground</a>
-</div>
-<ul>
-    <% for (let campground of campgrounds) {%>
-        <li> <a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li>
-    <% } %>
-</ul>
+<section class="campgrounds">
+    <h1>All Campgrounds</h1>
+    <div>
+        <a href="/campgrounds/new">Add Campground</a>
+    </div>
+    <ul class="campgrounds__list">
+        <% for (let campground of campgrounds) {%>
+            <li class="campgrounds__item"> <a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li>
+        <% } %>
+    </ul>
+</section>
 
