--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,5 +16,6 @@
     <main class="content-container">
         <%- body %>
     </main>
+    <script src="/scripts/responsive-nav.js"></script>
 </body>
 </html>
