--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,3 +1,9 @@
+:root {
+    --color-primary-light:  #466fe2;
+    --color-primary:  #114df0;
+    --color-primary-dark:  #11369b;
+}
+
 * {
     margin: 0;
     padding: 0;
