--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,10 @@
 <nav class="navigation">
-    <a href="" class="navigation__logo" href="/">
+    
+    <a href="/campgrounds" class="navigation__logo">
         Brand Name
     </a>
 
-    <div class="navigation__links navigation__links--collapsed">
+    <div class="navigation__items">
         <a href="/campgrounds" class="navigation__item">All Campgrounds</a>
         <a href="/campgrounds/new" class="navigation__item">Add Campground</a>
         <a href="/campgrounds/new" class="navigation__item">Link Three</a>
@@ -11,7 +12,9 @@
         <a href="/campgrounds/new" class="navigation__item">Link Five</a>
     </div>
 
-    <svg class="navigation__hamburger">
+    <svg class="navigation__toggle-button">
         <use href="/images/sprite.svg#icon-hamburger"></use>
     </svg>
+
+    <script src="/scripts/responsive-nav.js"></script>
 </nav>
