--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>
+<% layout('layouts/BaseLayout') %>
 <section class="campgrounds">
     <h1>All Campgrounds</h1>
     <div>
