--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>
+<% layout('layouts/BaseLayout') %>
 <form action="/campgrounds" method="post">
     <div>
         <label for="title">Title</label>
