--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>
+<% layout('layouts/BaseLayout') %>
 <h1><%= campground.title %></h1>
 <h2> <%= campground.location %> </h2>
 <div>
