--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>
+<% layout('layouts/BaseLayout') %>
 <h1>Edit Campground</h1>
 <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post">
     <div>
