--- a/views/layouts/BaseLayout.ejs
+++ b/views/layouts/BaseLayout.ejs
@@ -12,7 +12,7 @@
     <title><%= pageMeta.title %> | Explore US</title>
 </head>
 <body>
-    <%- include('../partials/header') %>
+    <%- include('../partials/Header') %>
     <%- body %>
 </body>
 </html>
